--- a/02_loop.yml
+++ b/02_loop.yml
@@ -6,7 +6,7 @@
     - name: Download files
       ansible.builtin.get_url:
         url: "{{ item }}"
-        dest: /home/floss/download/
+        dest: /home/floss/download
       loop:
         - https://github.com/git-for-windows/git/releases/download/v2.30.0.windows.1/Git-2.30.0-64-bit.exe
         - https://www.python.org/ftp/python/3.8.7/python-3.8.7-embed-amd64.zip
