--- a/02_azure_tower.yml
+++ b/02_azure_tower.yml
@@ -102,5 +102,5 @@
     debug:
       msg: "{{ webserver_pub_ip.state.ip_address }}"
 
-  - name: Add webserver to ssh known_hosts
-    shell: "ssh-keyscan -t ecdsa {{ webserver_pub_ip.state.ip_address }}  >> /home/{{ user }}/.ssh/known_hosts"
+  #- name: Add webserver to ssh known_hosts
+  #  shell: "ssh-keyscan -t ecdsa {{ webserver_pub_ip.state.ip_address }}  >> /home/{{ user }}/.ssh/known_hosts"
